syntax = "proto3";

package com.sirius.bootstrap.msg;

message Message {
    oneof msgId {
        MoveMessage moveMessage = 1001;
    }
}

message MoveMessage {
  string playerId = 1;
  float posX = 2;
  float posY = 3;
  float posZ = 4;
  float rotX = 5;
  float rotY = 6;
  float rotZ = 7;
}

message PlayerState {
    string player_id = 1;
    float position_x = 2;
    float position_y = 3;
    float position_z = 4;
    float rotation_y = 5;
    float speed = 6;
    bool is_jumping = 7;
    bool is_sprinting = 8;
    double timestamp = 9;
}